--- a/bcms/building_construction_manufacturing_service/doctype/attach_image_for_govt_approval/attach_image_for_govt_approval.json
+++ b/bcms/building_construction_manufacturing_service/doctype/attach_image_for_govt_approval/attach_image_for_govt_approval.json
@@ -1,36 +1,27 @@
 {
  "actions": [],
  "allow_rename": 1,
- "creation": "2025-07-22 11:14:26.894210",
+ "creation": "2025-07-22 18:54:35.370409",
  "doctype": "DocType",
- "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "recommendation_letter_section",
-  "recommendation_letter"
+  "attach_image_for_govt_approval_letter"
  ],
  "fields": [
   {
-   "fieldname": "recommendation_letter",
+   "fieldname": "attach_image_for_govt_approval_letter",
    "fieldtype": "Attach",
-   "in_list_view": 1,
-   "in_standard_filter": 1,
-   "label": "Recommendation Letter"
-  },
-  {
-   "fieldname": "recommendation_letter_section",
-   "fieldtype": "Section Break",
-   "label": "Recommendation Letter"
+   "label": "Attach Image for Govt. Approval Letter"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-07-22 17:51:52.410134",
+ "modified": "2025-07-22 18:54:48.539691",
  "modified_by": "Administrator",
  "module": "Building Construction Manufacturing Service",
- "name": "Recommendation Letter",
+ "name": "Attach Image for Govt Approval",
  "owner": "Administrator",
  "permissions": [],
  "row_format": "Dynamic",
